# smth

./: README.md  readme.txt
ML/: regression_real_pred_plot.ipynb
ML [old]/Linear Regression (my realisation; with gradient descent and L2-regularization)/: LinearRegression.py
ML/AvitoTech ML cup 2024/: AvitoTech ML cup 2024.txt  avitotech-ml-cup-2024-notebook-1-splitting.ipynb  avitotech-ml-cup-2024-notebook-2-catboost.ipynb
ML/Linear Regression (my realisation; with gradient descent)/: LinearRegression.py
ML/housing_pricing/: Baseline.ipynb  houses.ipynb  link.txt  nb.ipynb  sample_submission.csv
ML/housing_pricing/subs/: A_sub.csv  base_sub.csv  maxabs_scale_sub.csv  minmax_scale_sub.csv  normal_sub.csv  std_scale_sub.csv
gcp/: gcp  gcp.cpp
test/: test.cpp
Алгоритмы/Возведения в степень/Быстрое возведение в степень/: main.cpp
Алгоритмы/Геометрия/Количество целочисленных точек на отрезке/: dots_number_on_segment.cpp
Алгоритмы/Геометрия/Определить вид треугольника/: type_of_triangle.cpp  примечание.txt
Задачи (по источникам)/Informatics/: login-password.txt
Задачи (старое)/: пысы.txt
Университет/: test.c
Университет/Лабы/2025-2026/Семестр 3/ООП/3/: CMakeLists.txt
Университет/Лабы/2025-2026/Семестр 3/ООП/3/headers/: SBase.hpp  SFile.hpp  SKbrd.hpp  SQueue.hpp
Университет/Лабы/2025-2026/Семестр 3/ООП/3/sources/: SFile.cpp  SKbrd.cpp  SQueue.cpp  main.cpp
типа freelance/2. комбинаторика Диме/: 1.cpp  2.cpp  3.cpp  условия_задач.docx
хакатоны/Первый (с Young_Zosa)/: Подать резюме.lnk  РезюмеFinder.lnk  презентация_проекта.pptx
(+1275 files in other folders)
